--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -1,36 +1,43 @@
 .main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    column-gap: 2rem;
+    padding: 0 2rem 3rem;
+    row-gap: 2rem;
     grid-template-areas:
         'header header header header'
         'subHeader subHeader subHeader .'
         'progressCards progressCards progressCards upgrade'
         'categories mentors mentors mentors';
+    background-color: #f7f5f3;
 }
 
 .header {
     grid-area: header;
     display: flex;
     justify-content: space-between;
-    padding: 3rem 2.5rem; 
+    padding-top: 3rem; 
 }
 
 .input {
-    background-color: aliceblue;
+    background-color: #faf7f2;
     padding: 1.5rem 3rem 1.5rem;
     border-radius: 3rem;
+    width: 40rem;
     border: none;
+    font-size: 1.1rem;
+    font-size: 20px;
     
 }
 
-.right {
+.headerRight {
     display: flex;
     gap: 0.6rem;
     align-items: center;
 }
 
-.headerMan {
-    height: 5rem;
+.userImg {
+    height: 6.5rem;
 
 } 
 
@@ -39,77 +46,189 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0rem 2.5rem; 
+}
+
+.subHeaderP {
+    font-size: 20px;
 }
 
 .progressCards {
     grid-area: progressCards;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 3rem 2.5rem; 
+    justify-content: stretch;
+    gap: 2rem;
 }
 
 .progressCard {
-    background-color: lightcyan;
-    padding: 4rem 3rem;
+    background-color: #f4f2fe;
+    padding: 2rem 3rem;
     border-radius: 3rem;
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* gap: 3rem; */
+    display: flex; 
+    flex-direction: column; 
+    gap: 2rem;
+    height: 100%;
+    width: 33%;
+    font-size: 20px;
 }
 
 .cardTop {
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.cardTitle {
-    margin-bottom: 1rem;
+.progressBar {
+    width: 100%;
+    background-color: palevioletred;
+    height: 0.5rem;
+    border-radius: 0.25rem;
+    overflow: hidden;
+    margin-bottom: 0.5rem;
 }
 
-.cardSubTitle {
-    margin-bottom: 1rem;
+.progressBarFill {
+    height: 100%;
+    background: pink;
+    border-radius: 0.25rem;
 }
 
-.cardBottom {
-    margin-top: 1rem;
+.progressBarNr {
+    display: flex;
+    justify-content: space-between;
 }
 
 .upgrade {
     grid-area: upgrade;
-    padding: 3rem 2.5rem 0 0; 
+    align-self: stretch;
 }
 
 .upgradeCard {
-    background-color: lightgoldenrodyellow;
-    padding: 5.7rem 5rem;
+    background-color: #feefd0;
     border-radius: 3rem;
+    height: 100%;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     gap: 3rem;
+    font-size: 20px;
 }
 
 .upgradeButton {
-    background-color: orange;
+    background-color: #f9b311;
     border: none;
     border-radius: 0.5rem;
-    padding: 1em;
+    padding: 1rem;
+    width: 10rem;
+    font-size: 18px;
 }
 
 .upgradeButton:hover {
-    background-color: antiquewhite;
+    background-color: #c2b189;
 }
 
 .categories {
     grid-area: categories;
+    padding: 2rem 3rem;
+    border-radius: 3rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0rem 2.5rem; 
+    flex-direction: column;
+    background-color: #eefcf0;
+}
+
+.categoriesTitle {
+    font-size: 26px;
+    margin-bottom: 2rem;
+}
+
+.categoriesEachRow {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 1rem;
+}
+
+.categoriesRowContent {
+    background-color: white;
+    margin-bottom: 3rem;
+}
+
+.categoriesRowContent td {
+    padding: 1.5rem;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 20px;
+}
+
+.categoriesRowContent td:first-child {
+    border-radius: 1.5rem 0 0 1.5rem;
+}
+
+.categoriesRowContent td:last-child {
+    border-radius: 0 1.5rem 1.5rem 0;
 }
 
 .mentors {
     grid-area: mentors;
+    padding: 2rem 3rem;
+    background-color: #e6f5fa;
+    border-radius: 3rem;
 }
 
+.mentorsHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    font-size: 20px;
+
+}
+
+.eachMentor {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 2rem;
+}
+
+.mentorRow {
+    background-color: white;
+    margin-bottom: 3rem;
+}
+
+.mentorRow td {
+    padding: 1.5rem;
+    vertical-align: middle;
+    font-size: 20px;
+}
+
+.mentorRow td:first-child {
+    border-radius: 1.5rem 0 0 1.5rem;
+}
+
+.mentorRow td:last-child {
+    border-radius: 0 1.5rem 1.5rem 0;
+}
+
+.mentorName {
+    font-weight: bold;
+}
+
+.followButton {
+    padding: 0.5rem 1.5rem;
+    width: 8rem;
+    border-radius: 0.5rem;
+    background-color: #f9b311;
+    border: none;
+}
+
+.followButton:hover {
+    background-color: #c2b189;
+}
+
+.mentorImg {
+    height: 3rem;
+}
 
